--- a/HTML-CSSINTERNETONNECTION.html
+++ b/HTML-CSSINTERNETONNECTION.html
@@ -89,7 +89,7 @@
         });
 
         checkoutButton.addEventListener('click', function() {
-            window.location.href = 'Payment/HTML-CSSPAYMENT.html';
+            window.location.href = 'HTML-CSSPAYMENT.html';
         });
     });
 </script>
